--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -2,5 +2,7 @@
 <%= simple_form_for [@list, @bookmark] do |f| %>
   <%= f.input :comment %>
   <%= f.association :movie %>
-  <%= f.submit %>
+  <%= f.submit class: 'btn btn-flat'%>
+  <%= link_to "Cancel", list_path(@list), class: "btn btn-flat" %>
+
 <% end %>
