--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -9,9 +9,10 @@
     <span class="mb-2 d-block"><small><em class="text-muted"><%= "You haven't saved any movies yet!" if @list.movies.empty? %></em></small></span>
     <div>
       <button type="button" class="btn btn-flat" data-bs-toggle="modal" data-bs-target="bookmarks#new">
-        <%= link_to "Add a Movie", new_list_bookmark_path(@list) %>
+        <%= link_to "Add a Movie", new_list_bookmark_path(@list), class: "btn btn-cancel" %>
       </button>
-      <%= link_to "delete this list", list_path(@list), method: :delete, class: "btn btn-cancel", data: { confirm: "Are you sure you want to delete this list?" } %>
+      <%= link_to "Delete this list", list_path(@list), method: :delete, class: "btn btn-cancel", data: { confirm: "Are you sure you want to delete this list?" } %>
+      <%= link_to "Back to Home", lists_path, class: "btn btn-cancel" %>
     </div>
   </div>
   <div class="row my-2">
@@ -19,7 +20,7 @@
       <% bookmark = Bookmark.find_by(list: @list, movie: movie) %>
       <div class="col-12 col-sm-6 mb-4" data-aos="zoom-in">
         <div class="bg-white rounded shadow h-100">
-          <%= image_tag movie.poster_url, alt: movie.title, class: "movie-img rounded-top img-responsive" %>
+          <%= image_tag movie.poster_url, alt: movie.title, class: "movie-img rounded-top img-fluid" %>
           <div class="p-3 rounded-bottom d-flex flex-column">
             <strong><%= movie.title %> <span class="text-muted font-weight-normal">• <%= movie.rating %> <i class="fas fa-star star-yellow"></i></span></strong>
             <small class="text-muted"><%= movie.overview %></small>
